refactor: update codebase to Java 17 features
- apply Switch Expressions (JEP 361 <https://openjdk.org/jeps/361>)

- apply Text Blocks and related methods (`String::formatted`,
  `String::stripIndent`) (JEP 378 <https://openjdk.org/jeps/378>)

- apply Pattern Matching for `instanceof` (JEP 394
  <https://openjdk.org/jeps/394>)

- update Java parser's language level to Java 21